--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,10 @@ img {
 }
 
 .container {
-  max-width: 1158px;
-  padding: 0 15px;
+  /* max-width: 1158px; */
+  width: 320px;
+  /* padding: 0 15px; */
+  padding: 0 16px;
   margin: 0 auto;
 }
 
@@ -214,16 +216,20 @@ img {
 }
 
 .principles {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  /* padding-top: 120px;
+  padding-bottom: 120px; */
+  padding-top: 96px;
+  padding-bottom: 96px; /*или 48px?*/
 }
 
 .principles-list {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  /* gap: 24px; */
+  row-gap: 72px;
 }
 
-.prnc-icon-container {
+/* .prnc-icon-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -233,19 +239,27 @@ img {
   width: 264px;
   height: 112px;
   background-color: #f4f4fd;
-}
+} */
 
 .principles-list-item {
-  width: calc((100% - 72px) / 4);
+  /* width: calc((100% - 72px) / 4); */
+  width: 100%;
 }
 
 .principles-list-item-head {
-  font-weight: 500;
+  /* font-weight: 500;
   font-size: 20px;
-  line-height: 1.2;
+  line-height: 1.2; */
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 8px;
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  text-align: center;
 }
 
 .principles-list-item-text {
@@ -253,6 +267,8 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+
+  font-weight: 500;
 }
 
 /* Our Team Section */
