--- a/css/styles.css
+++ b/css/styles.css
@@ -34,10 +34,8 @@ img {
 }
 
 .container {
-  /* max-width: 1158px; */
   width: 320px;
-  /* padding: 0 15px; */
-  padding: 0 16px;
+  padding: 0 15px;
   margin: 0 auto;
 }
 
@@ -151,28 +149,43 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/background.jpg);
+    url(../images/phone-background.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 600px;
-  padding: 188px 0;
-  max-width: 1440px;
+
+  height: 432px;
+  padding: 72px 0;
+  width: 320px;
   margin: 0 auto;
 }
 
+@media screen and (min-devise-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .banner {
+    background-color: #2e2f42;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/phone-bg-2x.jpg);
+  }
+}
+
 .banner-head {
-  font-size: 56px;
+  font-size: 36px;
   font-weight: 700;
-  line-height: 1.07;
+
+  line-height: 1.1;
   letter-spacing: 0.02em;
   text-align: center;
   color: #ffffff;
 
-  max-height: 120px;
-  max-width: 496px;
+  max-height: 160px;
+  max-width: 216px;
   margin: 0 auto;
-  margin-bottom: 48px;
+  margin-bottom: 72px;
 }
 
 .banner-button {
@@ -182,6 +195,7 @@ img {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
+
   cursor: pointer;
   border-radius: 4px;
   border: none;
@@ -190,6 +204,7 @@ img {
   transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
   display: block;
   min-width: 169px;
   margin: 0 auto;
@@ -216,40 +231,29 @@ img {
 }
 
 .principles {
-  /* padding-top: 120px;
-  padding-bottom: 120px; */
   padding-top: 96px;
   padding-bottom: 96px; /*или 48px?*/
 }
 
 .principles-list {
   display: flex;
-  flex-direction: column;
-  /* gap: 24px; */
+  flex-wrap: wrap;
   row-gap: 72px;
 }
 
-/* .prnc-icon-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 8px;
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
-  width: 264px;
-  height: 112px;
-  background-color: #f4f4fd;
-} */
+.prnc-icon-container {
+  display: none;
+}
 
 .principles-list-item {
-  /* width: calc((100% - 72px) / 4); */
   width: 100%;
 }
 
+.principles-list-icon {
+  display: none;
+}
+
 .principles-list-item-head {
-  /* font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2; */
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 8px;
@@ -264,23 +268,26 @@ img {
 
 .principles-list-item-text {
   font-size: 16px;
+  font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-
-  font-weight: 500;
 }
 
 /* Our Team Section */
 
 .team {
   background-color: #f4f4fd;
-  padding: 120px 0;
+  /* padding: 120px 0; */
+  padding: 96px 0;
+  margin: 0 auto;
 }
 
 .team-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  row-gap: 72px;
+  padding: 0 12px;
 }
 
 .team-head {
@@ -298,17 +305,14 @@ img {
   padding: 32px 0;
 }
 
-/* .container-team-ph-text {
-  padding-top: 32px;
-} */
-
 .team-list-item {
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-  width: calc((100% - 72px) / 4);
+  /* width: calc((100% - 72px) / 4); */
+  width: 264px;
 }
 
 .team-list-item-head {
@@ -364,7 +368,7 @@ img {
 /* Portfolio Section */
 
 .portfolio {
-  padding: 120px 0;
+  padding: 96px 0;
 }
 
 .portfolio-head {
@@ -381,7 +385,7 @@ img {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 24px;
+  /* column-gap: 24px; */
   row-gap: 48px;
 }
 
@@ -391,10 +395,18 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.portfolio-list-item-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
 
 .portfolio-list-item {
-  width: calc((100% - 48px) / 3);
+  width: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -409,19 +421,15 @@ img {
 
 .container-portfolio-card {
   padding: 32px 16px;
-  border: 1px solid #e7e9fc;
+  /* border: 1px solid #e7e9fc; */
+  border: 1px solid #f4f4fd;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   border-top: none;
 }
 
-.portfolio-list-item-head {
-  margin-bottom: 8px;
-}
-
-.portfolio-list-item-text {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
+.container-portfolio-card:first-child {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-cover-wrap {
