--- a/css/media.css
+++ b/css/media.css
@@ -1,9 +1,101 @@
+/* ------------- T A B L E T ------------- */
+
 @media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+    padding: 0 16px;
+    margin: 0 auto;
+  }
+
+  /* Header */
+
+  .navigation {
+    display: flex;
+    align-items: center;
+  }
+
+  .header-logo {
+    margin-right: 120px;
+    padding: 24px 0;
+  }
+
+  .header-menu-btn {
+    display: none;
+  }
+
+  .navigation-list,
+  .contacts {
+    display: flex;
+  }
+
+  .navigation-link {
+    position: relative;
+    color: #2e2f42;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+
+    padding: 24px 0;
+
+    display: block; /* ???? */
+  }
+
+  .navigation-link-studio {
+    color: #404bbf;
+  }
+
+  .navigation-link-studio::after {
+    content: '';
+    position: absolute;
+    display: block;
+    border-radius: 2px;
+    width: 100%;
+    height: 4px;
+    background-color: #404bbf;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    left: 0;
+    bottom: -1px;
+  }
+
+  .navigation-list {
+    gap: 40px;
+    margin-right: 121px;
+  }
+
+  .contacts {
+    flex-direction: column;
+    gap: 12px;
+    padding: 16px 0;
+  }
+
+  .contacts-link {
+    color: #434455;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+  }
+
+  .address-info {
+    font-style: normal;
+  }
+
+  .navigation-link,
+  .contacts-link {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .navigation-link:hover,
+  .navigation-link:focus,
+  .navigation-link:active,
+  .contacts-link:hover,
+  .contacts-link:focus {
+    color: #404bbf;
+  }
+
   /* Banner */
 
   .banner {
-    height: 436px;
-    width: 768px;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
@@ -36,12 +128,6 @@
 
   /* Principles */
 
-  .container {
-    width: 768px;
-    padding: 0 16px;
-    margin: 0 auto;
-  }
-
   .principles-list {
     column-gap: 24px;
   }
@@ -63,6 +149,7 @@
   }
 
   /* Portfolio */
+
   .portfolio-list {
     display: flex;
     flex-wrap: wrap;
@@ -72,15 +159,94 @@
 
   .portfolio-list-item {
     width: calc((100% - 24px) / 2);
+    height: 420px;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  }
+
+  .portfolio-list-item:first-child {
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  }
+
+  /* Footer */
+
+  .footer-info-container {
+    flex-wrap: wrap;
+    flex-direction: row;
+    column-gap: 24px;
+    row-gap: 72px;
+    margin-left: 96px;
+  }
+
+  .footer-logo-container {
+    align-items: flex-start;
+  }
+
+  .footer-logo {
+    text-align: left;
+  }
+
+  .footer-text {
+    width: 264px;
+  }
+
+  .footer-social-head {
+    text-align: left;
+  }
+
+  .footer-form {
+    flex-direction: row;
+    align-items: baseline;
+    gap: 24px;
+  }
+
+  .footer-form-head {
+    text-align: left;
+  }
+
+  .email-input {
+    width: 264px;
+  }
+
+  /* Modal Window */
+
+  .modal {
+    width: 408px;
+    min-height: 584px;
+    padding: 72px 24px 24px 24px;
   }
 }
 
+/* ------------- D E S K T O P ------------- */
+
 @media screen and (min-width: 1158px) {
+  .container {
+    width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+  }
+
+  /* Header */
+
+  .header-logo {
+    margin-right: 76px;
+  }
+
+  .contacts {
+    flex-direction: row;
+    gap: 40px;
+  }
+
+  .contacts-link {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
+
   /* Banner */
 
   .banner {
     height: 600px;
-    width: 1440px;
+    min-width: 1158px;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
@@ -107,11 +273,6 @@
   }
 
   /* Principles */
-
-  .container {
-    width: 1158px;
-    padding: 0 15px;
-  }
 
   .principles {
     padding-top: 120px;
@@ -177,5 +338,37 @@
 
   .portfolio-list-item {
     width: calc((100% - 48px) / 3);
+    border: 1px solid #e7e9fc;
+    box-shadow: none;
+  }
+
+  .portfolio-cover-text {
+    display: block;
+  }
+
+  /* Footer */
+
+  .footer-info-container {
+    flex-wrap: nowrap;
+    align-items: baseline;
+    gap: 0;
+    /* flex-direction: row; */
+    margin-left: 0;
+  }
+
+  .footer {
+    padding: 100px 0;
+  }
+
+  .footer-logo-container {
+    margin-right: 120px;
+  }
+
+  .footer-social-container {
+    margin-right: 80px;
+  }
+
+  .email-input {
+    opacity: 1;
   }
 }
